--- a/main.tex
+++ b/main.tex
@@ -76,14 +76,14 @@
 \chapter*{Agradecimientos}
 \thispagestyle{empty} % Saco el numero de página en los agradecimientos
 
-Al terminar esta tesis, no puedo dejar de agradecer a aquellas personas que tuvieron impacto en la misma:
+Al terminar esta tesis, quiero expresar mi gratidud a aquellas personas que tuvieron impacto en la misma:
 { \setlength{\parindent}{24pt}
 
-    \textit{En primer lugar deseo expresar gratidud a mi director, Dr.\ Ing. Mariano G. Beiró, por la dedicación y apoyo que ha brindado a este trabajo, por el respeto y confianza a mis sugerencias e ideas y por la guía a lo largo de esta tesis.}
+    \textit{A mi director, Dr.\ Ing. Mariano G. Beiró, por la dedicación y apoyo que ha brindado a este trabajo, por el respeto y confianza a mis sugerencias e ideas y por la guía a lo largo de esta tesis.}
 
     \textit{A mis profesores, de todos los niveles educativos y competiciones en las que me he involucrado, por la educación impartida y los valores inculcados a lo largo de los años.}
 
-    \textit{Un trabajo de investigación es siempre fruto de ideas, proyectos y esfuerzos previos. En este caso mi más sincero agradecimiento a Pablo Lamela Seijas, Yves Hauser y todo el equipo de investigación y desarrollo de IOHK, por la oportunidad y la supervisión durante los aportes de este trabajo.}
+    \textit{Un trabajo de investigación es siempre fruto de ideas, proyectos y esfuerzos previos. En este caso mi más sincero agradecimiento a Pablo Lamela Seijas, Yves Hauser y a todo el equipo de investigación y desarrollo de IOHK, por la oportunidad de contribución y la supervisión durante los aportes de este trabajo.}
 
     \textit{A los miembros del jurado, por haber aceptado la lectura y evaluación de este trabajo.}
 }
@@ -95,7 +95,7 @@ También en lo personal quiero agradecer:
 
     \textit{A Ana, quién me ha acompañado en incontables momentos mientras realizaba este trabajo.}
 
-    \textit{A mis amigos, por entender mis ausencias durante los largos momentos de estudio y desarrollo de este trabajo.}
+    \textit{A mis amigos y compañeros de la facultad, por entender mis ausencias durante los largos momentos de estudio y desarrollo de este trabajo y por hacer aún más entretenido e interensante el transcurso de la carrera.}
 
     \textit{Finalmente, reconocer a todas las personas que me han brindado su tiempo, paciencia, comprensión y solidaridad a lo largo de esta tesis y durante mis años de estudio y formación.}
 }
