Logos y overfull hbox

--- a/main.tex
+++ b/main.tex
@@ -54,14 +54,13 @@
 		\textit{Verificación de smart contracts en Marlowe\\ para la blockchain Cardano}}
 
 	\author{
-		\textbf{Director:} Dr.\ Ing. Mariano G. Beiró \\
-		\texttt{mbeiro@fi.uba.ar}\\[2.5ex]
-		\textbf{Co-director:} Phd. Simon Thompson (Kent University, IOHK) \\
-		\texttt{S.J.Thompson@kent.ac.uk}
-		\\[2.5ex]
-		\textbf{Alumno:} Julián Ferres, \textit{(Padrón \#101.483)}                                \\
-		\texttt{ jferres@fi.uba.ar }                                    \\[2.5ex]
-		\normalsize{Facultad de Ingeniería, Universidad de Buenos Aires}        \\
+		\textbf{Alumno:} Julián Ferres, \textit{(Padrón \#101.483)} \\
+		\texttt{jferres@fi.uba.ar}\\[2.5ex]
+        \textbf{Director:} Dr.\ Ing. Mariano G. Beiró \\
+        \texttt{mbeiro@fi.uba.ar}\\[2.5ex]
+        \textbf{Co-director:} Phd. Simon Thompson (Kent University, IOHK) \\
+        \texttt{S.J.Thompson@kent.ac.uk}\\[2.5ex]
+		\normalsize{Facultad de Ingeniería, Universidad de Buenos Aires}  \\
 	}
 	\date{\today}
 
@@ -2037,7 +2036,7 @@ A continuación adjunto la especificación técnica del contrato COM~\cite{ACTUS
 \end{functions}
 \endgroup
 
-El contrato COM tiene una implementación similar al contrato STK (Stock), debido a que comparte alguna de las funciones de cambio de estado. Los detalles de la implementación, junto con la de los demas contratos, se encuentran disponibles en la rama \texttt{fiuba-collaboration-writing-actus-contracts}\footnote{Disponible en el \href{https://github.com/input-output-hk/marlowe-cardano/tree/fiuba-collaboration-writing-actus-contracts}{repositorio marlowe-cardano de input-output-hk}}.
+El contrato COM tiene una implementación similar al contrato STK (Stock), debido a que comparte alguna de las funciones de cambio de estado. Los detalles de la implementación, junto con la de los demas contratos, se encuentran disponibles en la rama\newline\texttt{fiuba-collaboration-writing-actus-contracts}\footnote{Disponible en el \href{https://github.com/input-output-hk/marlowe-cardano/tree/fiuba-collaboration-writing-actus-contracts}{repositorio marlowe-cardano de input-output-hk}}.
 
 
 
